--- a/groceries.bib
+++ b/groceries.bib
@@ -69,6 +69,30 @@
   file = {/Users/gregmacfarlane/Zotero/storage/XVH94XEV/Bao et al. - 2020 - Urban food accessibility and diversity Exploring .pdf;/Users/gregmacfarlane/Zotero/storage/38XDJXL4/S0143622819311373.html}
 }
 
+@phdthesis{barnes2021,
+  type = {{{MS Thesis}}},
+  title = {Resiliency of {{Utah}}'s {{Road Network}}: {{A Logit-Based Approach}}},
+  shorttitle = {Resiliency of {{Utah}}'s {{Road Network}}},
+  author = {Barnes, Max},
+  year = {2021},
+  month = dec,
+  address = {{Provo, Utah}},
+  school = {Brigham Young University},
+  file = {/Users/gregmacfarlane/Zotero/storage/9MVXUC2Y/9300.html}
+}
+
+@book{ben-akiva1985,
+  title = {Discrete {{Choice Analysis}}: {{Theory}} and {{Applications}} to {{Travel Demand}}},
+  shorttitle = {Discrete {{Choice Analysis}}},
+  author = {{Ben-Akiva}, Moshe and Lerman, Steven R.},
+  year = {1985},
+  eprint = {1391567},
+  eprinttype = {jstor},
+  publisher = {{MIT Press}},
+  urldate = {2023-01-26},
+  abstract = {This book, which is intended as a graduate level text and a general professional reference, presents the methods of discrete choice analysis and their applications in the modeling of transportation systems. The first seven chapters provide a basic introduction to discrete choice analysis that covers the material needed to apply basic binary and multiple choice models. The chapters are as follows: introduction; review of the statistics of model estimation; theories of individual choice behavior; binary choice models; multinomial choice; aggregate forecasting techniques; and tests and practical issues in developing discrete choice models. The rest of the chapters cover more advanced material and culminate in the development of a complete travel demand model system presented in chapter 11. The advanced chapters are as follows: theory of sampling; aggregation and sampling of alternatives; models of multidimensional choice and the nested logit model; and systems of models. The last chapter (12) presents an overview of current research frontiers.}
+}
+
 @article{cass2005,
   title = {Social {{Exclusion}}, {{Mobility}} and {{Access}}},
   author = {Cass, Noel and Shove, Elizabeth and Urry, John},
@@ -364,6 +388,15 @@
   file = {/Users/gregmacfarlane/Zotero/storage/75W8UMUZ/Finkel - INTEGRATING THE SAFE SYSTEM APPROACH WITH THE HIGH.pdf}
 }
 
+@techreport{fns2021,
+  title = {Thrifty {{Food Plan}}},
+  author = {{FNS}},
+  year = {2021},
+  institution = {{Food and Nutrition Service, United States Department of Agriculture}},
+  abstract = {Background..............................................................................................................................................................................................v Results.....................................................................................................................................................................................................vi Methods.................................................................................................................................................................................................vii Conclusion..............................................................................................................................................................................................ix The Thrifty Food Plan, 2021.....................................................................................................................................................................1 Introduction............................................................................................................................................................................................. 1 The Significance of the Thrifty Food Plan to Nutrition Security........................................................................................... 1 The Thrifty Food Plan: What It Is, What It Is Not................................................................................................................... 4 History of the Thrifty Food Plan.................................................................................................................................................. 5 Approach to Reevaluating the Thrifty Food Plan..................................................................................................................... 6 Methods.................................................................................................................................................................................................. 8 Phase One: Identify and Prepare Data Sources, Develop Modeling Categories, and Establish the Inputs and Constraints................................................................................................................................................................. 10 Phase Two: Run the Optimization Model and Evaluate the Solution, Create the Thrifty Food Plan Market Baskets............................................................................................................................................................................... 29 Summary of Updates to the Methods for the Thrifty Food Plan, 2021........................................................................... 32 Results: The Thrifty Food Plan, 2021 Market Baskets............................................................................................................... 34 Thrifty Food Plan Market Basket: Cost for the Reference Family of Four....................................................................... 34 Thrifty Food Plan Market Basket: Market Basket Category Amounts and Expenditure Shares................................35 Comparing the Thrifty Food Plan, 2021 Market Baskets With Current Consumption Patterns and To Previous Market Baskets............................................................................................................................................................................... 43 Discussion............................................................................................................................................................................................. 47 The Thrifty Food Plan, 2021: A Reflection of the Cost of a Nutritious Diet................................................................... 47 Practical Application of the Thrifty Food Plan, 2021............................................................................................................48 Future Considerations and Reevaluations of the Thrifty Food Plan................................................................................. 49 A Step Toward Nutrition Security...............................................................................................................................................51},
+  file = {/Users/gregmacfarlane/Zotero/storage/R2RQ3AIV/2021 - Thrifty Food Plan, 2021.pdf}
+}
+
 @article{francis2012,
   title = {Quality or Quantity? {{Exploring}} the Relationship between {{Public Open Space}} Attributes and Mental Health in {{Perth}}, {{Western Australia}}},
   shorttitle = {Quality or Quantity?},
@@ -397,6 +430,17 @@
   urldate = {2023-06-09},
   langid = {english},
   file = {/Users/gregmacfarlane/Zotero/storage/U6GX7RC4/Gerike et al. - 2019 - Special Issue “Walking and Cycling for better Tran.pdf;/Users/gregmacfarlane/Zotero/storage/X3Y49ZZC/S0965856419302873.html}
+}
+
+@article{geurs2010,
+  title = {Accessibility Appraisal of Land-Use/Transport Policy Strategies: {{More}} than Just Adding up Travel-Time Savings},
+  author = {Geurs, Karst and Zondag, Barry and {de Jong}, Gerard and {de Bok}, Michiel},
+  year = {2010},
+  journal = {Transportation Research Part D: Transport and Environment},
+  volume = {15},
+  number = {7},
+  pages = {382--393},
+  doi = {10.1016/j.trd.2010.04.006}
 }
 
 @article{glanz2007,
@@ -446,6 +490,23 @@
   pages = {1175--1194},
   doi = {10.1068/a291175},
   abstract = {Accessibility is an important characteristic of metropolitan areas and is often reflected in transportation and land-use planning goals. But the concept of accessibility has rarely been translated into performance measures by which policies are evaluated, despite a substantial literature on the concept. This paper is an attempt to bridge the gap between the academic literature and the practical application of such measures and provide a framework for the development of accessibility measures. Issues that planners must address in developing an accessibility measure are outlined, and two case studies suggestive of the range of possible approaches are presented.}
+}
+
+@article{hedrick2022,
+  title = {Validity of a {{Market Basket Assessment Tool}} for {{Use}} in {{Supplemental Nutrition Assistance Program Education Healthy Retail Initiatives}}},
+  author = {Hedrick, Valisa E. and Farris, Alisha R. and Houghtaling, Bailey and Mann, Georgianna and Misyak, Sarah A.},
+  year = {2022},
+  month = aug,
+  journal = {Journal of Nutrition Education and Behavior},
+  volume = {54},
+  number = {8},
+  pages = {776--783},
+  issn = {1499-4046},
+  doi = {10.1016/j.jneb.2022.02.018},
+  urldate = {2023-08-21},
+  abstract = {Objective To assess the validity of the Market Basket Analysis Tool (MBAT) for food environment quality within various retail environments compared to the Nutrition Environment Measures Survey in Stores (NEMS-S). Methods In-store assessments using the MBAT and the NEMS-S on the same day in a given store were conducted in grocery stores, corner stores, pharmacies, and dollar stores in a metropolis, and urban and rural counties across 4 states: Louisiana, Mississippi, North Carolina, and Virginia. Descriptive statistics, correlations, and ANOVAs were used to assess store location, store type differences, and MBAT and NEMS-S scores. Results Market Basket Analysis Tool and NEMS-S data were collected from 114 stores. Market Basket Analysis Tool and NEMS-S total and all individual component scores were significantly correlated (r\,=\,0.84, P {$\leq$} 0.0001; r range, 0.51\textendash 0.88; P {$\leq$} 0.0001). Conclusions and Implications The MBAT offers a methodology to measure the food retail environment focusing on the availability of healthful food items with a reduced training time and streamlined data collection compared with the NEMS-S. Future work can assess the completion time of the MBAT compared with the NEMS-S and the ability of the MBAT to detect changes in food environment quality post healthy food retail interventions.},
+  keywords = {food retail environment,nutrition assessment,SNAP-Ed,validity testing},
+  file = {/Users/gregmacfarlane/Zotero/storage/HWAFA3IC/Hedrick et al. - 2022 - Validity of a Market Basket Assessment Tool for Us.pdf;/Users/gregmacfarlane/Zotero/storage/C4NIFQ95/S1499404622000598.html}
 }
 
 @article{hillier2011,
@@ -505,6 +566,23 @@
   file = {/Users/gregmacfarlane/Zotero/storage/37Z8NJL7/Jarry and Apparicio - 2021 - Ride in Peace How Cycling Infrastructure Types Af.pdf}
 }
 
+@article{kaczynski2016,
+  title = {{{ParkIndex}}: {{Development}} of a Standardized Metric of Park Access for Research and Planning},
+  shorttitle = {{{ParkIndex}}},
+  author = {Kaczynski, Andrew T. and Schipperijn, Jasper and Hipp, J. Aaron and Besenyi, Gina M. and Wilhelm Stanis, Sonja A. and Hughey, S. Morgan and Wilcox, Sara},
+  year = {2016},
+  month = jun,
+  journal = {Preventive Medicine},
+  volume = {87},
+  pages = {110--114},
+  issn = {0091-7435},
+  doi = {10.1016/j.ypmed.2016.02.012},
+  urldate = {2023-08-18},
+  abstract = {Objective A lack of comprehensive and standardized metrics for measuring park exposure limits park-related research and health promotion efforts. This study aimed to develop and demonstrate an empirically-derived and spatially-represented index of park access (ParkIndex) that would allow researchers, planners, and citizens to evaluate the potential for park use for a given area. Methods Data used for developing ParkIndex were collected in 2010 in Kansas City, Missouri (KCMO). Adult study participants (n=891) reported whether they used a park within the past month, and all parks in KCMO were mapped and audited using ArcGIS 9.3 and the Community Park Audit Tool. Four park summary variables \textemdash{} distance to nearest park, and the number of parks, amount of park space, and average park quality index within 1mile were analyzed in relation to park use using logistic regression. Coefficients for significant park summary variables were used to create a raster surface (ParkIndex) representing the probability of park use for all 100m\texttimes 100m cells in KCMO. Results Two park summary variables were positively associated with park use \textemdash{} the number of parks and the average park quality index within 1 mile. The ParkIndex probability of park use across all cells in KCMO ranged from 17 to 77 out of 100. Conclusion ParkIndex represents a standardized metric of park access that combines elements of both park availability and quality, which was developed empirically and can be represented spatially. This tool has both practical and conceptual significance for researchers and professionals in diverse disciplines.},
+  keywords = {Built environment,Measurement,Parks,Planning},
+  file = {/Users/gregmacfarlane/Zotero/storage/IHIY3D82/Kaczynski et al. - 2016 - ParkIndex Development of a standardized metric of.pdf;/Users/gregmacfarlane/Zotero/storage/L4A6WCP8/S0091743516000517.html}
+}
+
 @article{liu2022,
   title = {Disentangling {{Time Use}}, {{Food Environment}}, and {{Food Behaviors Using Multi-Channel Sequence Analysis}}},
   author = {Liu, Bochu and Widener, Michael J. and Smith, Lindsey G. and Farber, Steven and Minaker, Leia M. and Patterson, Zachary and Larsen, Kristian and Gilliland, Jason},
@@ -520,6 +598,24 @@
   copyright = {\textcopyright{} 2021 The Ohio State University},
   langid = {english},
   file = {/Users/gregmacfarlane/Zotero/storage/3QZP28T5/Liu et al. - 2022 - Disentangling Time Use, Food Environment, and Food.pdf;/Users/gregmacfarlane/Zotero/storage/C9Y8R3L8/gean.html}
+}
+
+@article{logan2019,
+  title = {Evaluating Urban Accessibility: Leveraging Open-Source Data and Analytics to Overcome Existing Limitations},
+  shorttitle = {Evaluating Urban Accessibility},
+  author = {Logan, {\relax TM} and Williams, {\relax TG} and Nisbet, {\relax AJ} and Liberman, {\relax KD} and Zuo, {\relax CT} and Guikema, {\relax SD}},
+  year = {2019},
+  month = jun,
+  journal = {Environment and Planning B: Urban Analytics and City Science},
+  volume = {46},
+  number = {5},
+  pages = {897--913},
+  publisher = {{SAGE Publications Ltd STM}},
+  issn = {2399-8083},
+  doi = {10.1177/2399808317736528},
+  urldate = {2023-08-18},
+  abstract = {We revisit the standard methodology for evaluating proximity to urban services and recommend enhancements to address existing limitations. Existing approaches often simplify their measure of proximity by using large areal units and by imposing arbitrary distance thresholds. By doing so, these approaches risk overlooking vulnerable, access-poor populations \textendash{} the very populations that such studies are often trying to identify. These limitations are primarily motivated by computational constraints. However, recent advances in computational power, open data, and open-source analytics permit high-resolution proximity analyses on large scales. Given the impetus for equitable accessibility in our communities, this is of fundamental importance for researchers and practitioners. In this paper, we present an approach that leverages these open source advances to (a) measure proximity using network distance at the building level, (b) estimate population at that level, and (c) present the resulting distributions so vulnerable populations can be identified. Using three cities and modes of transport, we demonstrate how the approach enhances existing measures and identifies service-poor populations where the previous methods fall short. The proximity results could be used alone, or as inputs to access metrics. Our collating of these components into an open source code provides opportunities for researchers and practitioners to explore fine-resolution, city-wide accessibility across multiple cities and the host of questions that follow.},
+  langid = {english}
 }
 
 @article{losada-rojas2021,
@@ -540,6 +636,44 @@
   file = {/Users/gregmacfarlane/Zotero/storage/VS25Z5IB/Losada-Rojas et al. - 2021 - Access to healthy food in urban and rural areas A.pdf;/Users/gregmacfarlane/Zotero/storage/CM4SIIW7/S2214140521002759.html}
 }
 
+@article{lunsford2021,
+  title = {Analysis of {{Availability}}, {{Quality}}, and {{Price}} of {{Food Options}} in {{Denver}}, {{CO Grocery Stores}}},
+  author = {Lunsford, Jesse and Brunt, Ardith and Foote, Jerald and Rhee, Yeong and Strand, Mark and Segall, Mark},
+  year = {2021},
+  month = may,
+  journal = {Journal of Hunger \& Environmental Nutrition},
+  volume = {16},
+  number = {3},
+  pages = {297--303},
+  publisher = {{Taylor \& Francis}},
+  issn = {1932-0248},
+  doi = {10.1080/19320248.2020.1741482},
+  urldate = {2023-08-21},
+  abstract = {This study examined Denver, Colorado area grocery stores to identify if significant differences in food price, availability, or quality existed for different population groups. Thirty stores were randomly selected and analyzed using Nutritional Environmental Measure Survey for Supermarkets (NEMS-S). Results showed there was no significant relationship between availability or quality and socioeconomic status or minority status. Higher prices were seen in stores of higher total income. Large supermarkets offered higher quality produce. Further research should assess how consumers make a store and consequent purchasing decisions as there are mixed results in the connection between access to healthful food choices and health.},
+  keywords = {disparities,food,Grocery store,NEMS-S},
+  file = {/Users/gregmacfarlane/Zotero/storage/LHE97PQF/Lunsford et al. - 2021 - Analysis of Availability, Quality, and Price of Fo.pdf}
+}
+
+@article{macfarlane2022,
+  title = {City Parks and Slow Streets: {{A}} Utility-Based Access and Equity Analysis},
+  shorttitle = {City Parks and Slow Streets},
+  author = {Macfarlane, Gregory and Voulgaris, Carole Turley and Tapia, Teresa},
+  year = {2022},
+  month = sep,
+  journal = {Journal of Transport and Land Use},
+  volume = {15},
+  number = {1},
+  pages = {587--612},
+  issn = {1938-7849},
+  doi = {10.5198/jtlu.2022.2009},
+  urldate = {2023-03-29},
+  abstract = {During the spring and summer of 2020, cities across the world responded to the global COVID-19 pandemic by converting roadway facilities into open pedestrian spaces. These conversions improved access to public open space, but measuring the variation in that improvement among different populations requires clear definitions of access and methods for measuring it. In this study, we evaluate the change in a utility-based park accessibility measure resulting from street conversions in Alameda County, California. Our utility-based accessibility measure is constructed from a park activity location choice model we estimate using mobile device data \textendash{} supplied by StreetLight Data, Inc. \textendash{} representing trips to parks in that county. The estimated model reveals heterogeneity in inferred affinity for park attributes among different sociodemographic groups. We find, for example, that neighborhoods with more lower-income residents and those with more residents of color show a greater preference for park proximty while neighborhods with higher incomes and those with more white residents show a greater preference for park size and amenities. We then apply this model to examine the accessibility benefits resulting from COVID-19 street conversions to create a set of small park-like open spaces; we find that this has been a pro-social policy in that Black, Hispanic, and low-income households receive a disproportionate share of the policy benefits, relative to the population distribution.},
+  copyright = {Copyright (c) 2022 Gregory Macfarlane, Carole Turley Voulgaris, Teresa Tapia},
+  langid = {english},
+  keywords = {Parks},
+  file = {/Users/gregmacfarlane/Zotero/storage/T7X4E8NH/Macfarlane et al. - 2022 - City parks and slow streets A utility-based acces.pdf}
+}
+
 @article{madzia2019,
   title = {Residential {{Greenspace Association}} with {{Childhood Behavioral Outcomes}}},
   author = {Madzia, Juliana and Ryan, Patrick and Yolton, Kimberly and Percy, Zana and Newman, Nick and LeMasters, Grace and Brokamp, Cole},
@@ -555,6 +689,16 @@
   langid = {english},
   keywords = {child behavior,green space,NDVI},
   file = {/Users/gregmacfarlane/Zotero/storage/LUY4SKFN/Madzia et al. - 2019 - Residential Greenspace Association with Childhood .pdf;/Users/gregmacfarlane/Zotero/storage/LTGSL8US/S0022347618315683.html}
+}
+
+@incollection{mcfadden1974,
+  title = {Conditional Logit Analysis of Qualitative Choice Behavior},
+  booktitle = {Frontiers in {{Econometrics}}},
+  author = {McFadden, Daniel},
+  editor = {Zarembka, Paul},
+  year = {1974},
+  pages = {105--142},
+  publisher = {{Academic Press}}
 }
 
 @article{monfort2021,
@@ -599,6 +743,24 @@
   abstract = {Routing is a key step in transport planning and research. Nonetheless, researchers and practitioners often face challenges when performing this task due to long computation times and the cost of licensed software. R\^5\^ is a multimodal transport network router that offers multiple routing features, such as calculating travel times over a time window and returning multiple itineraries for origin/destination pairs. This paper describes r5r, an open-source R package that leverages R\^5\^ to efficiently compute travel time matrices and generate detailed itineraries between sets of origins and destinations at no expense using seamless parallel computing.},
   langid = {english},
   file = {/Users/gregmacfarlane/Zotero/storage/R3ZYXTAX/Pereira et al. - 2021 - r5r Rapid Realistic Routing on Multimodal Transpo.pdf}
+}
+
+@article{recker1978,
+  title = {Factors Influencing Destination Choice for the Urban Grocery Shopping Trip},
+  author = {Recker, Wilfred W. and Kostyniuk, Lidia P.},
+  year = {1978},
+  month = mar,
+  journal = {Transportation},
+  volume = {7},
+  number = {1},
+  pages = {19--33},
+  issn = {1572-9435},
+  doi = {10.1007/BF00148369},
+  urldate = {2023-08-18},
+  abstract = {Destination choice for the urban grocery shopping trip is hypothesized to be determined by three factors: the individual's perception of the destination, the individual's accessibility to the destination and the relative number of opportunities to exercise any particular choice. Results of a multinomial logit model estimation support this hypothesis and provide useful information concerning the role of urban form in this destination choice situation. It is determined that accessibility is the primary aspect influencing destination choice and that its effect is nonlinear.},
+  langid = {english},
+  keywords = {Economic Geography,Logit Model,Model Estimation,Relative Number,Technology Management},
+  file = {/Users/gregmacfarlane/Zotero/storage/DLRQ82XU/Recker and Kostyniuk - 1978 - Factors influencing destination choice for the urb.pdf}
 }
 
 @article{schraufnagel2019,
@@ -647,6 +809,19 @@
   howpublished = {https://smartgrowthamerica.org/resources/elements-complete-streets-policy/},
   langid = {american},
   file = {/Users/gregmacfarlane/Zotero/storage/FXZRTNYG/elements-complete-streets-policy.html}
+}
+
+@book{train2009,
+  title = {Discrete {{Choice Methods}} with {{Simulation}}},
+  author = {Train, Kenneth E.},
+  year = {2009},
+  month = jun,
+  edition = {2nd edition},
+  publisher = {{Cambridge University Press}},
+  address = {{Cambridge ; New York}},
+  abstract = {This book describes the new generation of discrete choice methods, focusing on the many advances that are made possible by simulation. Researchers use these statistical methods to examine the choices that consumers, households, firms, and other agents make. Each of the major models is covered: logit, generalized extreme value, or GEV (including nested and cross-nested logits), probit, and mixed logit, plus a variety of specifications that build on these basics. Simulation-assisted estimation procedures are investigated and compared, including maximum stimulated likelihood, method of simulated moments, and method of simulated scores. Procedures for drawing from densities are described, including variance reduction techniques such as anithetics and Halton draws. Recent advances in Bayesian procedures are explored, including the use of the Metropolis-Hastings algorithm and its variant Gibbs sampling. The second edition adds chapters on endogeneity and expectation-maximization (EM) algorithms. No other book incorporates all these fields, which have arisen in the past 25 years. The procedures are applicable in many fields, including energy, transportation, environmental studies, health, labor, and marketing.},
+  isbn = {978-0-521-74738-7},
+  langid = {english}
 }
 
 @misc{usdepartmentoftransportation2022,
